Compute modelsForFields in SemanticQueryBuilder